--- a/syn/mojo_top_summary.html
+++ b/syn/mojo_top_summary.html
@@ -402,10 +402,10 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ethan/Dropbox/Code/FPGA/AcousticPulseTrain/syn/usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Aug 30 21:51:35 2013</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ethan/Dropbox/Code/FPGA/AcousticPulseTrain/syn/webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Aug 30 21:51:36 2013</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ethan/Dropbox/Code/FPGA/AcousticPulseTrain/syn/usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Fri Aug 30 21:51:35 2013</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ethan/Dropbox/Code/FPGA/AcousticPulseTrain/syn/webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Fri Aug 30 21:51:36 2013</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 08/30/2013 - 21:51:37</center>
+<br><center><b>Date Generated:</b> 08/30/2013 - 22:04:32</center>
 </BODY></HTML>
